synced javafx